# m8c

./: .clang-format  .editorconfig  .gitignore  .gitmodules  AUDIOGUIDE.md  Android.mk  CMakeLists.txt  Dockerfile  LICENSE  Makefile  Makefile_win  README.md  RECORDING.md  SDL2_inprint.h  args.c  args.h  audio.c  audio.h  command.c  command.h  config.c  config.h  config.ini  config.ini.sample  crt-pi.fragment  crt-pi.vertex  crt.fragment  custom_log.h  default.nix  flake.nix  fx_cube.c  fx_fire.c  fx_fire.h  fx_gradient.c  fx_gradient.h  fx_piano.c  fx_piano.h  fx_tunnel.c  fx_tunnel.h  fxhelpers.c  (+33 more)
.github/workflows/: build-macos-arm.yml  build-macos-intel.yml  build-macos.yml  build-ubuntu.yml  build-windows.yml  build.yml  nix-package.yml  update-package-versions.yml
emu/: CMakeLists.txt  emu.cpp
macos/m8c.app/Contents/: Info.plist
macos/m8c.app/Contents/Resources/: m8c.icns
package/appimage/: m8c.appdata.xml  m8c.desktop  package.sh
package/macos/: Entitlements.plist
package/macos/m8c.app/Contents/: Info.plist
package/macos/m8c.app/Contents/Resources/: m8c.icns
package/rpm/: m8c.spec
package/share/applications/: m8c.desktop
scripts/: prepare-steamdeck.sh
src/: SDL2_inprint.h  audio.c  audio.h  command.c  command.h  command_queue.c  command_queue.h  common.h  config.c  config.h  emu.h  events.c  events.h  font1.h  font2.h  font3.h  font4.h  font5.h  fx_cube.c  fx_cube.h  fx_piano.c  fx_piano.h  gamecontrollers.c  gamecontrollers.h  gamepads.c  gamepads.h  ini.c  ini.h  inline_font.h  inprint2.c  input.c  input.h  log_overlay.c  log_overlay.h  main.c  midi.c  midi.h  queue.c  queue.h  recorder.c  (+13 more)
src/backends/: audio.c  audio.h  audio_libusb.c  audio_sdl.c  m8.h  m8_libserialport.c  m8_libusb.c  m8_rtmidi.c  m8_winmidi.c  queue.c  queue.h  rtmidi.c  rtmidi.h  serialport.c  serialport.h  slip.h  usb.c  usb.h  usb_audio.c  winmidi_wrapper.cpp  winmidi_wrapper.h
src/fonts/: font1.h  font2.h  font3.h  font4.h  font5.h  fonts.c  fonts.h
